# src/routes/privateRoutes.js
@@ -8,6 +8,13 @@ Routes.get("/users/:id", users.getById);
 Routes.put("/update/users/:id", users.updateAll);
 Routes.patch("/update/users/password/:id", users.updatePassword);
 Routes.delete("/delete/users/:id", users.delete);
+
+// ROTAS DE  CLIENTES
 Routes.get("/client/:id", client.getAllKeys);
+Routes.post("/client/add/:id", client.updateClient);
+
+
+// ROTAS DE CADASTRO DE ALERGIA
+Routes.post("/client/add/allergy", client.addAllergy);
 
 module.exports = Routes;
